force-app/main/default/objects/Alarm__c/Alarm__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PTINFE-121 Mensagem de incentivo para ofertar DAUTO e Conta Digital da Móvel</description>
    <label>Alarme</label>
</CustomObject>