force-app/main/default/objects/Alarm__c/fields/DebAutCadastradoFixa__c.field-meta.xml
<CustomField>
    <fullName>DebAutCadastradoFixa__c</fullName>
    <label>DebAutCadastradoFixa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>