force-app/main/default/objects/Alarm__c/fields/DebAutCadastradoMovel__c.field-meta.xml
<CustomField>
    <fullName>DebAutCadastradoMovel__c</fullName>
    <label>DebAutCadastradoMovel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>