force-app/main/default/objects/Alarm__c/fields/FatDigitalCadastradaFixa__c.field-meta.xml
<CustomField>
    <fullName>FatDigitalCadastradaFixa__c</fullName>
    <label>FatDigitalCadastradaFixa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>