force-app/main/default/objects/Alarm__c/fields/FatDigitalCadastradaMovel__c.field-meta.xml
<CustomField>
    <fullName>FatDigitalCadastradaMovel__c</fullName>
    <label>FatDigitalCadastradaMovel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>