force-app/main/default/objects/Alarm__c/fields/OfertarDebAutFixa__c.field-meta.xml
<CustomField>
    <fullName>OfertarDebAutFixa__c</fullName>
    <label>OfertarDebAutFixa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>