force-app/main/default/objects/Alarm__c/fields/OfertarDebAutMovel__c.field-meta.xml
<CustomField>
    <fullName>OfertarDebAutMovel__c</fullName>
    <label>OfertarDebAutMovel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>