force-app/main/default/objects/Alarm__c/fields/OfertarFaturaDigitalFixa__c.field-meta.xml
<CustomField>
    <fullName>OfertarFaturaDigitalFixa__c</fullName>
    <label>OfertarFaturaDigitalFixa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>