force-app/main/default/objects/Alarm__c/fields/OfertarFaturaDigitalMovel__c.field-meta.xml
<CustomField>
    <fullName>OfertarFaturaDigitalMovel__c</fullName>
    <label>OfertarFaturaDigitalMovel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>